WIP fix frontpage version selector to not jump

--- a/risteys_elixir/assets/css/tailwind.css
+++ b/risteys_elixir/assets/css/tailwind.css
@@ -284,6 +284,7 @@ header .actions a {
 .subnav {
     cursor: pointer;
     @apply ml-2;
+    position: relative;
 }
 
 .subnav-content {
@@ -309,6 +310,13 @@ header .actions a {
 
 .subnav-content ul li a:hover {
     @apply underline
+}
+
+.frontpage .subnav-content {
+    padding-top: 1.5rem;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .header > h1 > a, .header > .actions > a,
